@@ -6880,14 +6880,23 @@ config-schema:
             revertedTagUpdate: RevertedTagUpdateJob
             'null': NullJob
             userEditCountInit: UserEditCountInitJob
-            parsoidCachePrewarm: ParsoidCachePrewarmJob
+            parsoidCachePrewarm: { class: ParsoidCachePrewarmJob, services: [ParsoidOutputAccess, PageStore, RevisionLookup], needsPage: false }
         type: object
         description: |-
             Maps jobs to their handlers; extensions
             can add to this to provide custom jobs.
-            A job handler should either be a class name to be instantiated,
-            or (since 1.30) a callback to use for creating the job object.
-            The callback takes (Title, array map of parameters) as arguments.
+            Since 1.40, job handlers can be specified as object specs
+            for use with ObjectFactory, using an array, a plain class name,
+            or a callback.
+            @note The constructor signature of job classes has to follow one of two patterns:
+            Either it takes a parameter array as the first argument, followed by any services it
+            needs to have injected: ( array $params, ... ).
+            Or it takes a PageReference as the first parameter, followed by the parameter array,
+            followed by any services: ( PageReference $page, array $params, ... ).
+            In order to signal to the JobFactory that the $page parameter should be omitted from
+            the constructor arguments, the job class has to be a subclass of GenericParameterJob,
+            or the object specification for the job has to set the 'needsPage' key to false.
+            If a callback is used, its signature follows the same rules.
     JobTypesExcludedFromDefaultQueue:
         default:
             - AssembleUploadChunks
